[tool.poetry]
name = "kids-code-python-api"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
flask = "^1.1.2"
dbi = "^1.2.5"
replit = "^2.0.0"
sentry-sdk = "^0.19.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
